js/gis/dijit/property/css/property.css
select {
  font-size:13px !important;
  //font-family: Papyrus,Pristina,Vivaldi,Gigi,Gabriola,Chiller,Broadway, Batang,Calibri,Verdana, sans-serif;
  //font-family:  Garamond,Calibri,Verdana, sans-serif;
 // font-family:  Verdana,Arial,helvetica;
}
 /*
.propertyDijit * {
     overflow: hidden !important;
}
 
.dijitDialogPaneContent  * {
   overflow: hidden !important;

}

#propertyNode  {
  overflow: hidden !important;

}
*/
.dijitDialogPaneContent  {
   overflow: hidden !important;

}
 
#pSearchResults {
   overflow: hidden !important;
   height:auto;
}

#pSearchSaved {
   overflow: hidden !important;
   height:auto;
}


/*
#propertyNode  * {
  overflow: hidden !important;

}

#property_parent * {
  //overflow: hidden !important;

}
*/

.pResultListTab {
    overflow: auto !important;

}
#pResultListTab {
   overflow: auto !important;
}
#pResultDetailTab {
   //overflow: auto !important;
   overflow: hidden !important;
   height:auto !important;
   padding:0px !important;
   margin:0px !important;
}
#pane1 {
   overflow: auto !important;
}
#pSavedTab {
  overflow: auto !important;
  /*display:none;*/
}
 


#pcMinDet {
 /* height:97% !important;*/
  width: 99% !important;

}
#pResultsTab{
  padding:0px !important;
  margin:0px !important;
}
 
.propertyDijit .listdbootstrapFix{
    padding: 0 0 0 25px;
    //overflow: hidden !important;
}

.propertyDijit .propertyContainer {
     //overflow: hidden !important;
	padding: 0px;
	font-size: 11px;
	//font-family: Papyrus,Pristina,Vivaldi,Gigi,Gabriola,Chiller,Broadway, Batang,Calibri,Verdana, sans-serif;

}

.propertyContainer {
     //overflow: hidden !important;
	padding: 0px;
	font-size: 11px;
	//font-family: Papyrus,Pristina,Vivaldi,Gigi,Gabriola,Chiller,Broadway, Batang,Calibri,Verdana, sans-serif;

}
.propertyContainer * {
     //overflow: hidden !important;
}
.floatingWidget .propertyDijit .propertyContainer {
	padding: 15px;
}
.propertyDijit .propertyNode {
    width: 98%;
    height: 575px;
    
}

 
.floatingWidget .propertyDijit .propertyNode {
    width: 350px;
     	
}
.propertyDijit .propertyTabContainer {
	width: 100%;
	height: 100%;
	//position: absolute;
	//top:0px;
	//left:0px;
}

#property_parent {
   //position: absolute !important;
   //top:40px !important;
   //left:80% !important;

}

#property_parent_title {
    font-size: 11px  !important;
    font-weight: bold  !important;
    margin: 0px;
}
 
.propertyDijit .progressIcon {
    background-image: url("../images/clock.png");
    background-repeat: no-repeat;
    background-size: 95% auto;
    height: 24px;
    //margin: 0px -10px;
    transition-duration: .3s;
    transition-timing-function: linear;
    transition-property: height width margin;
    width: 24px;
}
.propertyDijit .progressButton {
    bottom: 0px;
    left: 6px;
    position: absolute;
}
.propertyDijit .progressIcon:hover {
    background-image: url("../images/clock.png");
    background-repeat: no-repeat;
    height: 36px;
    //margin: -6px -16px;
    width: 36px;
    
}
.propertyDijit .progressButton .dijitButtonNode {
    background-color: rgba(0, 0, 0, 0) !important;
    background-image: none !important;
    border-style: none !important;
    box-shadow: none !important;
    bottom: -10px;
    //left: 6px;
    position: absolute;
}
.propertyDijit .closeButton {
    //bottom: -2px;
    left: 45%;
    //position: absolute;
    font-size: 11px  !important;
}

.propertyDijit .dijitInline .dijitButtonNode {
     font-size: 11px  !important;
     margin: 0px 2px 1px 3px !important;
     padding: 0px 2px 1px 3px !important;

}

.propertyDijit .dijitArrowButtonInner {
    display: none;
}
.propertyDijit .icon-caret-up:before, .dbootstrap .dijitUpArrowButton:before, .dbootstrap .dgrid-sort-up .dgrid-sort-arrow:before  {
    display: none;
    content:"";
}



.propertyDijit .propertyError {
    color: #FF0000;
    font-size: 12px;
    font-weight: normal;
    margin: 5px 15px;
}
.propertyDijit .dijitTitlePane .dijitTitlePaneContentInner {
    font-size: 10px;
    margin: 5px 15px;
    padding: 0;
}
.propertyDijit .dijitTitlePane .dijitTitlePaneTitle {
    font-size: 11px;
    font-weight: bold;
}
.propertyDijit .dijitDialogPaneActionBar {
    padding: 5px;
    text-align: center;
}
.propertyDijit .dijitTitlePane .dijitTitlePaneContentInner UL {
    margin-left: -10px;
}
.propertyDijit .propertyIntro {
    margin: 0 10px 10px;
    font-size: 11px;
}





.pContRes {
  display:none;
  text-align: left;

}

.pContResVis {
  display:block;

}


.showAtStartup {
    bottom: 10px;
    position: absolute;
    right: 15px;
    font-size: 9px;
}



.ptabContBG {
  background: url(http://gisvm109/viewer_dev/images/okaloosa.jpg);
  opacity: 0.2;
  width: 100%;
  height: 100%;
  position: absolute;
  top:0px;
  left:22%;
  background-repeat: no-repeat;
  background-size: 55% auto;
}

.ptabContMain {
  opacity: 1;
  //background: url(http://gisvm109/viewer_dev/images/okaloosa_fade.png);
    background-repeat: no-repeat;
  //background-size: 85% auto;
  //width: 100%;
  //height: 100%;
  height: auto !important;
  //position: absolute;
  //top:0px;
  //left:0%;

}
.ptabActnBar {
 
  height: 25px;
  //padding: 0px 0px 0px 0px;
 padding: 0px !important;

}
#property_parent_underlay {
     
}

 
/*
.dbootstrap .dijitDialogUnderlay {
     //background-color: rgb(0, 0, 0);
     background-color: transparent;
     opacity: 0.0 !important;
}
*/
.dijitDialogUnderlay {
     //background: none repeat scroll 0% 0% rgb(238, 238, 238);
     //opacity: 1.0  !important;
}

.dbootstrap .dijitInputContainer {
    padding: 1px;

 }
.dbootstrap .dijitDialogTitleBar {
    padding: 5px 15px 5px  0px ;
    border-bottom: 2px solid rgb(38, 38, 38);
    background-color: rgba(105, 144, 141, 0.7 );
}

.dbootstrap .dijitTab {
    color: rgb(0, 136, 204);
    text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.5);
    margin-right: 2px;
    padding: 4px 6px;
    line-height: 17px;
    //border: 1px solid transparent;
    border: 1px solid  rgba(245, 245, 215, 0 ); 
    border-radius: 4px;
    background-color: lightgrey;
}
.dbootstrap .dijitTabHover {
   background-color: rgba(243, 243, 245, 0.5);
    border-color: rgba(215, 215, 215, 0 );
  //text-shadow: 0px 2px 0px rgba(255, 55, 55, 0.5);
    
}
.dbootstrap .dijitTabChecked {
  color: #555;
  background-color: #fff;
  border-color: #ddd;
  background-color: rgba(205, 205, 205, 0.5);
  border-color: rgba(245, 245, 215, 0 );  
  //color: rgb(0, 136, 204);
  //text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.5);
   margin-right: 2px;
   padding: 4px 6px;
   line-height: 17px;
    border: 3px solid rgb(0, 136, 204);
    border-radius: 4px;  

  cursor: default;
}

.dbootstrap .dijitContentPane {
    padding: 2px;
}

.dbootstrap .dijitTabContainerBottom-tabs, .dbootstrap .dijitTabContainerTop-tabs, .dbootstrap .dijitTabContainerLeft-tabs, .dbootstrap .dijitTabContainerRight-tabs {
    border: medium none;
    background-color: rgba(112, 162, 171, 0.5  ); 
}

.dbootstrap .dijitDialogTitle {
    font-size: 10px;
    font-weight: bold;
    margin: 0px;
}
 
.propertyDijit .dbootstrap .dijitContentPane {
    padding: 2px;
}
 
.progressDialog h2 {
    color: #000000;
    cursor: pointer;
    font-size: 15px;
    font-weight: bold;
    opacity: 0.5;
    position: absolute;
    right: 57px;
    top: -25px;
}
.progressTitle {
    text-align: center;
}
 
.progressTable {
    border-collapse: collapse;
}
.progressTable td {
    background-color: #E5E5E5;
    border: 1px solid #000000;
    padding: 0 5px;
}
.progressDialog div {
    margin: 0px;
}
.progressDialog div + div {
    padding: 5px 0 30px;
}
.showMetricsAtStartup {
    bottom: 15px;
    left: 20px;
    position: absolute;
}
.sendButton {
    bottom: 9px;
    position: absolute;
    right: 20px;
}













.ptabContent {
    //text-align: center ;
    text-align: left !important;
    font-size: 11px;
    margin: 0px !important;
    //margin-left: auto ;
    //margin-right: auto ;
    padding: 0px !important;
   //background-color: #CACACA;
    //background-image: url("../images/clock.png");
    //background-repeat: no-repeat;
    //background-size: 95% auto;
    //height: 100%;
    //width: 100%;
   
    //transition-duration: 4.9s;
    //transition-timing-function: linear;
    //transition-property: height width margin;
    //line-height: 14px;

}

.ptabContent hr {
  
    margin: 0px !important;
    padding: 0px !important;
 

}
/*
.ptabContent img {
  
    margin: 10px 15px 20px 140px !important;
    //padding: 0px !important;
 

}*/

 
 
.propertyDijit .outerList>li {
    margin-bottom: 1em;
}
.propertyDijit .list-unstyled {
    padding-left: 0px;
    list-style-type: none;
    list-style-position: outside;
    list-style-image: none;
}

.propertyDijit .list-inline {
    padding-left: 0px;
    margin-left: -5px;
    list-style-type: none;
    list-style-position: outside;
    list-style-image: none;
}

.propertyDijit .list-inline > li {
    display: inline-block;
}

.propertyDijit .drawButton {
    width: 50px;
}

.propertyDijit .stopIcon {
    color: red;
}

.propertyDijit .drawButton .dijitButtonText {
    /*display: none;*/
}
.propertyDijit .polyIcon {
    background-image: url(../images/toolbar_icons.png);
    background-position: -68px 0;
    width: 16px;
    height: 16px;
}

.propertyDijit .pointIcon {
    background-image: url(../images/toolbar_icons.png);
    background-position: 0px 0;
    width: 16px;
    height: 16px;
}

.propertyDijit .circleDrawIcon {
    background-image: url(../images/toolbar_icons.png);
    background-position: -390px 0;
    width: 16px;
    height: 16px;
}

.propertyDijit .lineIcon {
    background-image: url(../images/toolbar_icons.png);
    background-position: -34px 0;
    width: 16px;
    height: 16px;
}

.propertyDijit .freehandDrawIcon {
    background-image: url(../images/toolbar_icons.png);
    background-position: -102px 0;
    width: 16px;
    height: 16px;
}

.propertyDijit .freehandPolygonDrawIcon {
    background-image: url(../images/toolbar_icons_2.png);
    background-position: -473px 0;
    width: 16px;
    height: 16px;
}

.propertyDijit .clearIcon {
    background-image: url(../images/clear.png);
    width: 16px;
    height: 16px;
}

.propertyDijit .formContainer {
    /*border: 1px solid #bbb;*/
    margin-bottom: -1px;
    width: 100%;
}

.propertyDijit .buttonActionBar {
    /*background-color: #F2F2F2;
    border: 1px solid #CDCDCD;*/
    padding: 3px 0px 2px 0px;
    text-align: right;
    width: 100%;
}

